--- a/report.tex
+++ b/report.tex
@@ -32,7 +32,7 @@
 
 
 \title{
-  \includegraphics[width=0.25\textwidth]{C:/Users/terez/Documents/LatexProjects/Crypto_Solutions/images/UNIPI.png}\\[3em]
+  \includegraphics[width=0.25\textwidth]{./images/UNIPI.png}\\[3em]
   Who Is The Killer?\\[0.3em]
   {\large Piraeus Vice Pattern Recognition Project} \\[1em]
 }
