--- a/slides.tex
+++ b/slides.tex
@@ -516,7 +516,7 @@
     
     \vspace{0.5em}
     
-    Βασίλαινα Μαρία, Γρηγοράσκου Τερέζα, Λιβέρης Φώτης
+    Vasilaina Maria, Grigoraskou Teresa, Liveris Fotis
     
     University of Piraeus
   \end{center}
